Issue #7670: sqlite3: Fixed crashes when operating on closed connections.